templates/middleware.yml
# Some middleware for referencing when we deploy services
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: default
spec:
  headers:
    frameDeny: true
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: crowdsec-bouncer
  namespace: default
spec:
  forwardAuth:
    address: http://traefik-bouncer-service.traefik/api/v1/forwardAuth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-ratelimit
  namespace: default
spec:
  rateLimit:
    average: 100
    burst: 50
    period: 10s
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured-chain
  namespace: default
spec:
  chain:
    middlewares:
    - name: default-crowdsec-bouncer@kubernetescrd
    - name: default-default-ratelimit@kubernetescrd
    - name: default-default-headers@kubernetescrd
